--- a/credit-card-website/package.json
+++ b/credit-card-website/package.json
@@ -23,9 +23,7 @@
     "@angular/ssr": "^18.2.6",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
-  },
+    "tslib": "^2.3.0"  },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.6",
     "@angular/cli": "^18.2.6",
