Ny forbedret client folder

--- a/credit-card-client/angular.json
+++ b/credit-card-client/angular.json
@@ -16,8 +16,7 @@
             "outputPath": "dist/credit-card-client",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-            ],
+            "polyfills": [],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -72,8 +71,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-            ],
+            "polyfills": [],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
