--- a/.gitignore
+++ b/.gitignore
@@ -92,12 +92,19 @@ Session.vim
 .nuxt
 .next
 
+# Typescript
+tsconfig.json
+tsconfig.spec.json
+
 # Bazel output (only if used)
 bazel-out
 
 # Angular build output
 .angular
 .angular/cache
+
+# Hand-in specific
+hand-in-1.md
 
 # Ignore compiled assets and chunks
 *.chunk.js
